build: update e2e and itests to use Java 21 during runtime (#10376)
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>